@@ -90,7 +90,7 @@ var loadModule                      = function(pParams){
         var lSlash = lName.indexOf('/');
         if(lSlash > 0){
             var lAfterSlash = lName.substr(lSlash);
-            lName = lName.replace(lAfterSlash, '');
+            lName = Util.removeStr(lName, lAfterSlash);
         }
     }
     
@@ -103,11 +103,9 @@ var loadModule                      = function(pParams){
             
             return DOM.jsload(cloudcmd.LIBDIRCLIENT + lPath, lFunc ||
                 function(){
-                    cloudcmd[lName].init(pArg);
+                    Util.exec(cloudcmd[lName].init, pArg);
                 });
         };
-    else
-        cloudcmd[lName + lPath];
 };
 
 CloudClient.GoogleAnalytics         = function(){
