@@ -127,7 +127,7 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
             lA = lA.href;
                     
         /* убираем адрес хоста*/
-        lA = lA.replace(cloudcmd.HOST, '');
+        lA = Util.removeStr(lA, cloudcmd.HOST);
         
         /* checking is this link is to directory */
         var lSize = DOM.getByClass('size', lCurrentFile);
@@ -138,15 +138,12 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
              * not html data
              */
             if (lSize === '<dir>'){
-                var lIndexOfNOJS = lA.indexOf(CloudFunc.NOJS);
-                if (lIndexOfNOJS === CloudFunc.FS.length){
-                    lA = lA.replace(CloudFunc.NOJS, '');
-                    /* when folder view 
-                     * is no need to edit
-                     * data
-                     */
-                    ReadOnly = true;
-                }
+                lA = Util.removeStr(lA, CloudFunc.NOJS);
+                /* when folder view 
+                 * is no need to edit
+                 * data
+                 */
+                ReadOnly = true;
             }
         }
         
