@@ -67,7 +67,33 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                     items: {
                         'upload_to_gist': {name: 'to Gist',
                             callback: function(key, opt){
-                                console.log('Upload To Gist');
+                                var lCurrent    = DOM.getCurrentFile(), 
+                                    lA          = DOM.getCurrentLink(lCurrent).href,
+                                    lName       = DOM.getCurrentName(lCurrent);
+                                /* убираем адрес хоста*/
+                                lA = Util.removeStr(lA, cloudcmd.HOST);
+                                lA = Util.removeStr(lA, CloudFunc.NOJS);
+                                
+                                DOM.ajax({
+                                    url     : lA,
+                                    error   : DOM.Images.showError,
+                                    success : function(data, textStatus, jqXHR){
+                                        if( Util.isObject(data) )
+                                            data = JSON.stringify(data, null, 4);
+                                        
+                                        var lGitHub = cloudcmd.GitHub;
+                                        
+                                        if('init' in lGitHub)
+                                            lGitHub.createGist(data, lName);
+                                        else
+                                            Util.exec(cloudcmd.GitHub,
+                                                function(){
+                                                    lGitHub.createGist(data, lName);
+                                                });
+                                    }
+                                });
+                                    
+                                Util.log('Uploading to gist...');
                             }
                         },
                     },
@@ -159,9 +185,9 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                                 .replace('z-index: 1', 'z-index:-1');
                         
                         /* get element by point */
-                        var lElement = document.elementFromPoint(pEvent.x, pEvent.y);
-                        var lTag = lElement.tagName;
-                        var lParent;
+                        var lElement    = document.elementFromPoint(pEvent.x, pEvent.y),
+                            lTag        = lElement.tagName,
+                            lParent;
         
                         if(lTag === 'A' || lTag === 'SPAN'){                
                             if (lElement.tagName === 'A')
