@@ -27,7 +27,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
     function load(pCallBack){
         console.time('github load');
         
-        var lDir    = './lib/client/storage/github/',
+        var lDir    = '/lib/client/storage/github/',
             lFiles  =  [
                 lDir + 'github.js',
                 lDir + 'lib/base64.js',
@@ -53,35 +53,8 @@ var CloudCommander, Util, DOM, $, Github, cb;
         });
     }
     
-    function saveToken(pToken){
-        return Cache.set('token', pToken);
-    }
-    
-    function getToken(){
-        return Cache.get('token');
-    }
-    
-    
-    /* PUBLICK FUNCTIONS */
-    GithubStore.basicLogin                  = function(pUser, pPasswd){
-        GithubLocal = new Github({
-            username: pUser,
-            password: pPasswd,
-            auth    : 'basic'
-        });
-    };
-    
-    GithubStore.Login                  = function(pToken){
-        Github = GithubLocal = new Github({
-            token   : pToken,
-            auth    : 'oauth'
-        });
-        
-        User = GithubLocal.getUser();
-    };
-
-    function init(pCallBack){
-        var lToken = getToken();
+   function init(pCallBack){
+        var lToken = Cache.get('token');
         if(lToken){
             GithubStore.Login(lToken);
             Util.exec(pCallBack);
@@ -100,7 +73,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
                             lToken = pData.token;
                             
                             GithubStore.Login(lToken);
-                            saveToken(lToken);
+                            Cache.set('token', lToken);
                             Util.exec(pCallBack);
                         }
                         else
@@ -116,58 +89,80 @@ var CloudCommander, Util, DOM, $, Github, cb;
         }
     }
     
-    function getUserData(){
-        var lName, lRepoNames,
-            lGetTree    = function(pError ,pData){
-                Util.log('Tree of ripository ' + lRepoNames[0].name + ': ');
-                var lTree = pData || [];
-                if(!pError)
-                    for(var i = 0, n = lTree.length; i < n ; i++)
-                        if( !Util.isContainStr(lTree[i].path, '/') )
-                            console.log(lTree[i].path);
-                else
-                    Util.log(pError);
-            },
-            
-            lShowRepos = function(pError, pRepos){
-                lRepoNames = pRepos || [];
-                Util.log('Repositories: ');
-                if(!pError){
-                    for(var i = 0, n = pRepos.length; i < n ; i++)
-                        console.log(pRepos[i].name);
-                        
-                    var lRepo = GithubLocal.getRepo(lName, pRepos[0].name);
-                    lRepo.getTree('master?recursive=true', lGetTree);
-                }
-                else
-                    DOM.Cache.remove('token');
-            },
+    function getUserData(pCallBack){
+        var lName,
         
             lShowUserInfo =  function(pError, pData){
                 if(!pError){
                     lName  = pData.name;
                     
                     console.log('Hello ' + lName + ' :)!');
-                    User.repos(lShowRepos);
                 }
                 else
                     DOM.Cache.remove('token');
             };
-        
-        
+                
         User.show(null, lShowUserInfo);
+        
+        Util.exec(pCallBack);
     }
     
-    cloudcmd.GitHub.init              = function(){
+    /* PUBLICK FUNCTIONS */
+    GithubStore.basicLogin          = function(pUser, pPasswd){
+        GithubLocal = new Github({
+            username: pUser,
+            password: pPasswd,
+            auth    : 'basic'
+        });
+    };
+    
+    GithubStore.Login               = function(pToken){
+        Github = GithubLocal = new Github({
+            token   : pToken,
+            auth    : 'oauth'
+        });
+        
+        User = GithubLocal.getUser();
+    };
+    
+    /**
+     * function creates gist
+     */
+    cloudcmd.GitHub.createGist      = function(pContent, pFileName){
+        if(pContent){
+            if(!pFileName)
+                pFileName = Util.getDate();
+            
+            var lGist       = GithubLocal.getGist(),
+                lFiles      = {},
+                lOptions    = {
+                    description: "uploaded from cloudcmd",
+                    public: true
+                };
+                    
+            lFiles[pFileName] ={
+                content: pContent
+            };
+            
+            lOptions.files = lFiles;
+            
+            lGist.create(lOptions, cb);
+        }
+        
+        return pContent;
+    };
+    
+    cloudcmd.GitHub.init            = function(pCallBack){
         Util.loadOnLoad([
+            Util.retExec(pCallBack),
             getUserData,
             init,
             setConfig,
             load
         ]);
         
-        this.init = null;
+        cloudcmd.GitHub.init = null;
     };
     
-    cloudcmd.Github    = GithubStore;
+    cloudcmd.Github                 = GithubStore;
 })();
