@@ -363,7 +363,8 @@ var Util, exports;
      * Gets current time in format hh:mm:ss
      */
     Util.getTime                    = function(){
-        var date        = new Date(),
+        var lRet,
+            date        = new Date(),
             hours       = date.getHours(),
             minutes     = date.getMinutes(),
             seconds     = date.getSeconds();
@@ -371,7 +372,21 @@ var Util, exports;
         minutes         = minutes < 10 ? '0' + minutes : minutes;
         seconds         = seconds < 10 ? '0' + seconds : seconds;
         
-        return hours + ":" + minutes + ":" + seconds;
+        lRet            = hours + ":" + minutes + ":" + seconds;
+        
+        return lRet;
+    };
+    /** 
+     * Gets current date in format yy.mm.dd hh:mm:ss
+     */
+    Util.getDate                    = function(){
+        var date    = new Date(),
+            day     = date.getDate(),
+            month   = date.getMonth() + 1,
+            year    = date.getFullYear(),
+            lRet    = year + "-" + month + "-" + day + " " + Util.getTime();
+        
+        return lRet;
     };
     
 })();
